Deployment_files/2_kube-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roboto-deployment
  namespace: discord-bot-py
  labels:
    app: roboto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roboto
  template:
    metadata:
      labels:
        app: roboto
    spec:
      containers:
      - name: roboto
        image: 192.168.10.5:5000/discord-bot-py:latest
        command: ["python", "client.py"]
        volumeMounts:
          - name: config
            mountPath: Discord-bot-py/config/bot.json
            subPath: bot.json
            readOnly: true
          - name: secrets
            mountPath: Discord-bot-py/config/secrets.json
            subPath: secrets.json
            readOnly: true

      volumes:
        - name: config
          configMap:
            name: discord-py-config
        - name: secrets
          secret:
            secretName: discord-py-secrets
