Deployment_files/3_database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roboto-postgres
  namespace: discord-bot-py
  labels:
    app: roboto-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: roboto-postgres
  template:
    metadata:
      labels:
        app: roboto-postgres
    spec:
      containers:
        - name: roboto-postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
              readOnly: false
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: nfs-robotopostgres-claim
---
apiVersion: v1
kind: Service
metadata:
  name: svc-robotodb
  namespace: discord-bot-py
  labels:
    app: roboto-postgres
spec:
  ports:
  - port: 5432
    protocol: TCP
  selector:
    run: roboto-postgres
