Deployment_files/0_kube-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: roboto-networkpolicy
  namespace: discord-bot-py
spec:
  podSelector:
    matchLabels:
      app: roboto
  policyTypes:
  - Egress
  egress:
  - {}
